Wrote the css for our character's website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
 	<title>Wreck It Ralph</title>
 <link rel="icon" href="img/ralph.avtr.jpeg">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!--header element -->
 	<header>
 		<img src="img/ralph.avtr.jpeg">
 		<h1>Wreck It Ralph</h1>
-		<h2>About Ralph</h2>
+	
 	</header>
 	<!-- main element -->
+	
 	<main>
+		<h2>About Ralph</h2>
 		<h2></h2>
 		<p>Ralph is awesome! He's an 8-bit video game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<img src="img/ralph.big.jpeg">
-		<p>Ralph and his friends</p>
+		<p class="caption">Ralph and his friends</p>
 		<!-- Charactertistics -->
 		<h2>Ralph's Characteristics</h2>
 		<ol>
